@@ -284,9 +284,11 @@ module Net
 
     # Disconnects from the server.
     def disconnect
-      if SSL::SSLSocket === @sock
+      begin
+        # try to call SSL::SSLSocket#io.
         @sock.io.shutdown
-      else
+      rescue NoMethodError
+        # @sock is not an SSL::SSLSocket.
         @sock.shutdown
       end
       @receiver_thread.join
