@@ -1,3 +1,9 @@
+Fri Jan  9 19:25:25 2009  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* lib/net/imap.rb (disconnect): do not refer SSL::SSLSocket for
+	  environments without OpenSSL.  backported from trunk.
+	  fixed [ruby-dev:35755].
+
 Thu Jan  8 13:24:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (deferred_nodes, compstmt, arg, fixup_nodes, range_op): fix
